ci/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website-stable
  namespace: premid
  labels:
    app: website-stable
spec:
  replicas: 2
  selector:
    matchLabels:
      app: website-stable-app
  template:
    metadata:
      labels:
        app: website-stable-app
    spec:
      containers:
        - name: website
          image: ghcr.io/premid/website:stable
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 2
            successThreshold: 1
            tcpSocket:
              port: 80
            timeoutSeconds: 2
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 2
            successThreshold: 1
            tcpSocket:
              port: 80
            timeoutSeconds: 2
