ci/service.yml
apiVersion: v1
kind: Service
metadata:
  name: website-stable-service
  namespace: premid
spec:
  type: ClusterIP
  selector:
    app: website-stable-app
  ports:
    - name: http
      port: 80
